--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8765
 eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=true
+eureka.client.fetch-registry=false
+eureka.client.service-url.defaultZone=http://localhost:8765/eureka/
