--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 server.port=8765
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-eureka.client.service-url.defaultZone=http://localhost:8765/eureka/
+eureka.client.service-url.defaultZone=http://eureka_user:eureka_pass@localhost:8765/eureka/
+#basic auth
+spring.security.user.name=eureka_user
+spring.security.user.password=eureka_pass
