--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,18 @@
 version: 2.1
 jobs:
-  build-and-test:
+  build-and-deploy:
     docker:
       - image: cimg/openjdk:17.0
     steps:
       - checkout
       - run:
-          name: Build and test
-          command: mvn clean test
+          name: Create maven settings
+          command: echo $MVN_SETTINGS > .circleci/.settings.xml
+      - run:
+          name: Build and deploy
+          command: mvn -s .circleci/.settings.xml clean package docker:build docker:push
 
 workflows:
-  build-and-test:
+  test:
     jobs:
-      - build-and-test
+      - build-and-deploy
