--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,9 @@ jobs:
       - image: cimg/openjdk:17.0
     steps:
       - checkout
+      - setup_remote_docker:
+          version: 20.10.14
+          docker_layer_caching: true
       - run:
           name: Create maven settings
           command: echo $MVN_SETTINGS > .circleci/.settings.xml
